--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   deploy:
 
-    runs-on: macos-12
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -33,5 +33,6 @@ jobs:
       run: python -m build
     - name: Publish package
       run: |
+        cp .pypirc ~/
         pip install twine
         twine upload dist/*
