--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,6 +29,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+    - name: Run code formatter
+      run: |
+        pip install yapf
+        python -m yapf --in-place --recursive --style="{based_on_style: google, indent_width: 4}" *.py
     - name: Build package
       run: python -m build
     - name: Publish package
