--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,25 +2,22 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
+orbs:
+  python-build: ffy00/python-build@0.0.2
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  example-job:
     docker:
+      # replace with your preferred image
       - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+      - python-build/build:
+          path: . 
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  example-workflow:
     jobs:
-      - say-hello
+      - example-job
+
