--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - checkout
       - run: |
           sudo dnf update
-          sudo dnf install python3 python3-pip
+          sudo dnf -y install python3 python3-pip
           pip3 install yapf setuptools build
           python3 -m build
           mv dist/*.whl /tmp/platforminfo.nightly.whl
