--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ executors:
           # visit app.circleci.com/settings/project/github/platforminfo/platforminfo/environment-variables
           username: $DOCKER_HUB_USER
           password: $DOCKER_HUB_PASSWORD
-    resource_class: medium
+    resource_class: large
 jobs:
   python-build:
     executor: my-custom-executor
@@ -36,9 +36,8 @@ jobs:
             equal: [ main, << pipeline.git.branch >> ]
           steps:
             - run: |
-                sudo pip install pipenv
-                pipenv install twine
-                pipenv run twine upload /tmp/dist/*
+                pip install twine
+                python3 -m twine upload /tmp/dist/*
       - store_artifacts:
           path: /tmp/platforminfo-build.whl
           destination: platforminfo-nightly.whl
