--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,9 @@ jobs:
             equal: [ main, << pipeline.git.branch >> ]
           steps:
             - run: |
-                pip install twine
-                python3 -m twine upload /tmp/dist/*
+                sudo pip3 install pipenv
+                pipenv install twine
+                pipenv run twine upload dist/*
       - store_artifacts:
           path: /tmp/platforminfo-build.whl
           destination: platforminfo-nightly.whl
