--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           at: dist
       - run:
           name: Upload package
-          command: build-scripts-cci/pypi-upload.sh
+          command: bash build-scripts-cci/pypi-upload.sh
   example-job:
     executor: executor-for-pytesting
     steps:
