--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,10 @@ jobs:
           python3 -m build
           mv dist/ /tmp/dist
           cp /tmp/dist/*.whl /tmp/platforminfo-build.whl
+      - persist_to_workspace:
+          root: workspace
+          paths:
+            - "tmp/dist"
       - store_artifacts:
           path: /tmp/platforminfo-build.whl
           destination: platforminfo-nightly.whl
@@ -39,10 +43,11 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: dist
+          at: /tmp/dist
       - run:
           name: Upload package
           command: bash build-scripts-cci/pypi-upload.sh
+
   example-job:
     executor: executor-for-pytesting
     steps:
