ADD PRELIMINARY FILES

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
 ]
+dependencies = [
+  'pyyaml ~= 6.0'
+]
 keywords = ["system", "os", "sysinfo", "winver", "osver", "osversion"]
 requires-python = ">=3.7"
 
