--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
         "configurations": [],
         "compounds": []
     },
-    "yapf.args": ["--style", "{based_on_style: pep8, indent_width: 4}"]
+    "yapf.args": [
+        "--style",
+        "{based_on_style: pep8, indent_width: 4}"
+    ],
+    "editor.fontSize": 11.75
 }
 
