--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "platforminfo"
-version = "1.0.0beta4.post1"
+version = "1.0.0beta5"
 description = "System info for Python made simple. PlatformInfo is designed to provide a simple, yet granular interface to find system information on all major operating systems within Python."
 authors = ["Tejas Raman <tejasraman@icloud.com>"]
 license = "BSD 3-Clause"
